--- a/client/src/pages/Main/style.css
+++ b/client/src/pages/Main/style.css
@@ -17,6 +17,10 @@
     height: 600px;
     border-style: solid;
     border-radius: 5px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
 }
 
 .queue-todo {
